Closed Bug 1669203 Opened 5 years ago Closed 5 years ago

MaybeRenewHostRecord should hold the resolver lock.

Categories

(Core :: Networking: DNS, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: valentin, Assigned: valentin)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

The eviction queue is accessed on multiple threads so we should avoid data races.

Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/10fd134507a8 MaybeRenewHostRecord should hold the resolver lock. r=necko-reviewers,kershaw
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Comment on attachment 9179584 [details]
Bug 1669203 - MaybeRenewHostRecord should hold the resolver lock. r=#necko

Beta/Release Uplift Approval Request

  • User impact if declined: Potential data races when parsing HTTPS records with TRR enabled (bug 1652670)
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This issue has been identified through code inspection. HTTPS records aren't very common yet but it would be good to make sure they don't cause a crash or worse on 82.
    We just make sure to hold a lock when removing elements from the linked list.
  • String changes made/needed:
Attachment #9179584 - Flags: approval-mozilla-beta?

Comment on attachment 9179584 [details]
Bug 1669203 - MaybeRenewHostRecord should hold the resolver lock. r=#necko

given how late we are in the cycle I'd rather let this ride the trains

Attachment #9179584 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: