Bug 1669203 - MaybeRenewHostRecord should hold the resolver lock. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D92428